--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Bateria</title>
         <link rel="stylesheet" href="css/reset.css" type="text/css" media="all"/>
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
@@ -16,10 +17,11 @@
             <div id="inferior">
                 <div class="boton" id="G"><h1>G</h1><h2>OPEN HAT</h2></div>
                 <div class="boton" id="H"><h1>H</h1><h2>RIDE</h2></div>
-                <div class="boton" id="I"><h1>I</h1><h2>SNARE</h2></div>
-                <div class="boton" id="J"><h1>J</h1><h2>TINK</h2></div>
-                <div class="boton" id="K"><h1>K</h1><h2>TOM</h2></div>
+                <div class="boton" id="J"><h1>J</h1><h2>SNARE</h2></div>
+                <div class="boton" id="K"><h1>K</h1><h2>TINK</h2></div>
+                <div class="boton" id="L"><h1>L</h1><h2>TOM</h2></div>
             </div>
         </div>
+        <script src="script.js"></script> 
     </body>
 </html>
